--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Character Classes\Entity.cs" />
     <Compile Include="Character Classes\Knight.cs" />
     <Compile Include="Character Classes\Mage.cs" />
+    <Compile Include="Character Classes\Player.cs" />
+    <Compile Include="Character Classes\Rogue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
