--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -41,18 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Character Classes\EntityHeroes.cs" />
-    <Compile Include="Character Classes\Knight.cs" />
-    <Compile Include="Character Classes\Mage.cs" />
-    <Compile Include="Character Classes\Rogue.cs" />
-    <Compile Include="Enemy Classes\EntityEnemies.cs" />
-    <Compile Include="Enemy Classes\Goblin.cs" />
-    <Compile Include="Enemy Classes\Golem.cs" />
-    <Compile Include="Enemy Classes\Spider.cs" />
+    <Compile Include="Ally Classes\Entity.cs" />
+    <Compile Include="Ally Classes\Heroes\Knight.cs" />
+    <Compile Include="Ally Classes\Heroes\Griffin.cs" />
+    <Compile Include="Ally Classes\Heroes\Crusader.cs" />
+    <Compile Include="Ally Classes\Minions\AirElemental.cs" />
+    <Compile Include="Ally Classes\Minions\Dwarf.cs" />
+    <Compile Include="Ally Classes\Minions\Gargoyle.cs" />
+    <Compile Include="Enemy Classes\Entity.cs" />
+    <Compile Include="Enemy Classes\Minions\Goblin.cs" />
+    <Compile Include="Enemy Classes\Minions\Golem.cs" />
+    <Compile Include="Enemy Classes\Minions\Spider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Workers\Worker.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Enemy Classes\Heroes\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
