--- a/GameWFA/GameWFA.csproj
+++ b/GameWFA/GameWFA.csproj
@@ -96,7 +96,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <None Include="Resources\Castle.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Dwarf.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Gargoyle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Air_Elemental.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
